# terminal-social-science-guide

./: .gitignore  CHANGELOG.md  SETUP.md  ch11-G2-handover.md  pyproject.toml
book/: _quarto.yml  cheatsheet.qmd  checklist.qmd  divergence.qmd  index.qmd  panic.qmd  references.bib
sandbox/: README.md
sandbox/asset-pricing/: .gitignore  Makefile  README.md  pyproject.toml  report.qmd
sandbox/asset-pricing/scripts/: 00_make_data.py  01_clean.py  02_portfolio.py  03_figure.py  04_regression.R  bootstrap_renv.R  check.py
tools/: validate_book.py
transcripts/: README.md  capture-ch02-mac.sh  capture-ch03-mac.sh  capture-ch04-mac.sh  capture-ch05-mac.sh  capture-ch06-mac.sh  capture-ch07-mac.sh  capture-ch08-mac.sh  capture-ch09-mac.sh  capture-ch10-mac.sh  capture-ch11-mac.sh  capture-ch11-mtime-mac.sh  capture-ch11-tabtrap-mac.sh  capture-ch11-timestamp-mac.sh  capture-ch11-touch-regression-mac.sh  capture-ch12-mac.sh  capture-ch12-mtime-mac.sh  capture-ch12-tabtrap-mac.sh  capture-ch12-timestamp-mac.sh  capture-ch12-touch-regression-mac.sh  capture-ch13-mac.sh  capture-ch13-tunnel-mac.sh  capture-ch14-mac.sh  capture-ch14-tunnel-mac.sh  capture-ch15-mac.sh  capture-ch16-mac.sh  capture-ch17-mac.sh  capture-ch17-ssh-mac.sh  capture-ch18-mac.sh  capture-ch18-ssh-mac.sh  ch02-builtin.txt  ch02-divergence-mac.txt  ch02-env.txt  ch02-exit-codes.txt  ch02-filesystem-mac.txt  ch02-filesystem.txt  ch02-help-mac.txt  ch02-help.txt  ch02-path.txt  ch02-process.txt  (+269 more)
verification/: README.md  chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  (+15 more)
(+40 files in other folders)
